--- a/module-api/build.gradle
+++ b/module-api/build.gradle
@@ -1,5 +1,7 @@
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.boot:spring-boot-starter-validation'
+
     implementation project(':module-domain')
     implementation project(':module-infra')
 }
