feat: 영화 예매 API 구현

--- a/module-infra/build.gradle
+++ b/module-infra/build.gradle
@@ -7,6 +7,10 @@ dependencies {
     implementation 'com.github.ben-manes.caffeine:caffeine'
     implementation 'org.redisson:redisson-spring-boot-starter:3.45.1'
 
+    // mapper
+    implementation 'org.mapstruct:mapstruct:1.6.3'
+    annotationProcessor 'org.mapstruct:mapstruct-processor:1.6.3'
+
     // querydsl
     annotationProcessor "com.querydsl:querydsl-apt:${dependencyManagement.importedProperties['querydsl.version']}:jakarta"
     annotationProcessor "jakarta.annotation:jakarta.annotation-api"
