feat: 영화 예매 기능 optimistic lock 적용

--- a/module-infra/src/main/resources/application.yml
+++ b/module-infra/src/main/resources/application.yml
@@ -4,7 +4,7 @@ spring:
   sql:
     init:
       platform: mysql
-#      mode: always
+      mode: embedded  # schema.sql 실행 활성화
   jpa:
     generate-ddl: true
     hibernate:
