--- a/module-infra/build.gradle
+++ b/module-infra/build.gradle
@@ -17,6 +17,7 @@ dependencies {
     annotationProcessor "jakarta.persistence:jakarta.persistence-api"
     runtimeOnly 'com.mysql:mysql-connector-j'
 
+    implementation project(':module-common')
     implementation project(':module-domain')
 }
 
