--- a/settings.gradle
+++ b/settings.gradle
@@ -1,5 +1,6 @@
 rootProject.name = 'theater-service'
 
 include 'module-api'
+include 'module-common'
 include 'module-domain'
 include 'module-infra'
